--- a/index.html
+++ b/index.html
@@ -156,72 +156,72 @@
           <li class="agenda__item">
             <img src="./assets/img/agenda-1.png" alt="Sala de cinema" />
             <div class="agenda__informacoes">
-              <h3>agosto</h3>
-              <h4>08 (sexta)</h4>
-              <h5>20:30</h5>
+              <h3>OutubroO</h3>
+              <h4>06 (SEXTA)</h4>
+              <h5>13:00</h5>
             </div>
             <div class="agenda__atracao">
-              <h6>Quinta 3D</h6>
+              <h6>Brasil Game Show</h6>
               <button>Avise-me</button>
             </div>
           </li>
           <li class="agenda__item">
             <img src="./assets/img/agenda-2.png" alt="Sala de cinema" />
             <div class="agenda__informacoes">
-              <h3>agosto</h3>
-              <h4>08 (sexta)</h4>
-              <h5>20:30</h5>
+              <h3>Junho</h3>
+              <h4>13 (terça)</h4>
+              <h5>11:00</h5>
             </div>
             <div class="agenda__atracao">
-              <h6>Festival de Cinema</h6>
+              <h6>E3</h6>
               <button>Avise-me</button>
             </div>
           </li>
           <li class="agenda__item">
             <img src="./assets/img/agenda-3.png" alt="Festival de balões" />
             <div class="agenda__informacoes">
-              <h3>agosto</h3>
-              <h4>08 (sexta)</h4>
-              <h5>20:30</h5>
+              <h3>Fevereiro</h3>
+              <h4>16 (quinta)</h4>
+              <h5>13:30</h5>
             </div>
             <div class="agenda__atracao">
-              <h6>Dia de Balonismo</h6>
+              <h6>Nintendo Direct</h6>
               <button>Avise-me</button>
             </div>
           </li>
           <li class="agenda__item">
             <img src="./assets/img/agenda-4.png" alt="Cantor de rock" />
             <div class="agenda__informacoes">
-              <h3>agosto</h3>
+              <h3>dezembro</h3>
               <h4>08 (sexta)</h4>
-              <h5>20:30</h5>
+              <h5>22:30</h5>
             </div>
             <div class="agenda__atracao">
-              <h6>Hard Rockers</h6>
+              <h6>The Game Awards</h6>
               <button>Avise-me</button>
             </div>
           </li>
           <li class="agenda__item">
             <img src="./assets/img/agenda-5.png" alt="Bailarinas no palco" />
             <div class="agenda__informacoes">
-              <h3>agosto</h3>
-              <h4>08 (sexta)</h4>
-              <h5>20:30</h5>
+              <h3>Dezembro</h3>
+              <h4>01 (sexta)</h4>
+              <h5>10:30</h5>
             </div>
             <div class="agenda__atracao">
-              <h6>Balé Municipal</h6>
+              <h6>CCXP</h6>
               <button>Avise-me</button>
             </div>
           </li>
           <li class="agenda__item">
             <img src="./assets/img/agenda-6.png" alt="Show a céu aberto" />
             <div class="agenda__informacoes">
-              <h3>agosto</h3>
-              <h4>08 (sexta)</h4>
-              <h5>20:30</h5>
+              <h3>março</h3>
+              <h4>16 (quinta)</h4>
+              <h5>22:00</h5>
             </div>
             <div class="agenda__atracao">
-              <h6>Festival Multicores</h6>
+              <h6>State of Play</h6>
               <button>Avise-me</button>
             </div>
           </li>
