--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <li class="agenda__item">
             <img src="./assets/img/agenda-1.png" alt="Sala de cinema" />
             <div class="agenda__informacoes">
-              <h3>OutubroO</h3>
+              <h3>Outubro</h3>
               <h4>06 (SEXTA)</h4>
               <h5>13:00</h5>
             </div>
